Added PR_Enablement and PR_and_Weather_Enablement scripts, updated UI with Farmer ID config

--- a/static/index.html
+++ b/static/index.html
@@ -80,6 +80,19 @@
                             <input type="text" id="x-api-key" placeholder="Enter API Key">
                         </div>
                     </div>
+
+                    <!-- Specific Config for PR_Enablement -->
+                    <div id="pr-weather-config"
+                        style="display: none; margin-top: 15px; border-top: 1px solid #e0e0e0; padding-top: 10px;">
+                        <div class="input-group">
+                            <label for="use-farmer-id">Include Farmer ID?</label>
+                            <select id="use-farmer-id"
+                                style="padding: 10px; border: 1px solid #ccc; border-radius: 4px; font-size: 14px; background-color: #fafafa; width: 100%;">
+                                <option value="no">No (Default)</option>
+                                <option value="yes">Yes (From Excel)</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
