Add Add_Users and Area_Audit_Removal scripts, update UI

--- a/static/index.html
+++ b/static/index.html
@@ -106,7 +106,8 @@
                         style="display: none; margin-top: 15px; border-top: 1px solid #e0e0e0; padding-top: 10px;">
                         <div class="input-group">
                             <label for="attr-count-select">Number of Attributes to Update</label>
-                            <select id="attr-count-select">
+                            <select id="attr-count-select"
+                                style="padding: 10px; border: 1px solid #ccc; border-radius: 4px; font-size: 14px; background-color: #fafafa; width: 100%;">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
