Enhance Script Details with Dynamic Docstring Extraction and UI Improvements

--- a/static/index.html
+++ b/static/index.html
@@ -247,6 +247,18 @@
                 </div>
             </div>
 
+            <!-- Script Details Section -->
+            <div class="card script-details" id="script-details-card">
+                <h3 class="details-title">Script Details</h3>
+                <p id="script-description" class="details-desc">Please select the script to show the details.</p>
+
+                <div class="details-inputs" id="details-inputs-container" style="display: none;">
+                    <span class="icon">📝</span>
+                    <strong style="font-weight: 600; color: #555;">Required Inputs:</strong>
+                    <span id="script-inputs" style="color: #666; margin-left: 5px;">-</span>
+                </div>
+            </div>
+
             <!-- Changed to 'action-grid' and added 'card' classes -->
             <div class="action-grid">
                 <div class="card step-card step-one">
