Enhance UI/UX and fix API key passing
- Make console output resizable and auto-scroll on execution
- Standardize configuration input field sizes
- Fix Google Maps API key not being passed to scripts
- Add default Google API Key to UI
- Improve server robustness for missing output files
- Force browser cache refresh for updated JS
- Update run_server.bat and stop_server.bat to be cross-platform

--- a/static/index.html
+++ b/static/index.html
@@ -104,7 +104,8 @@
 
                             <div class="input-group">
                                 <label for="x-api-key">X-API-KEY</label>
-                                <input type="text" id="x-api-key" placeholder="Enter API Key">
+                                <input type="text" id="x-api-key" placeholder="Enter API Key"
+                                    value="c9ef0d0e71695c18b4b4762b035d512b">
                             </div>
                         </div>
 
@@ -305,7 +306,7 @@
 
         </div>
     </div>
-    <script src="/static/js/app.js"></script>
+    <script src="/static/js/app.js?v=2"></script>
 </body>
 
 </html>
