Refactor Farmer/Asset updates, rename config UI, add restart script, add Split_CAs

--- a/static/index.html
+++ b/static/index.html
@@ -123,7 +123,7 @@
                         </div>
 
                         <!-- Specific Config for Update_Asset_add_Attribute -->
-                        <div id="asset-attr-config">
+                        <div id="attribute-config">
                             <div class="input-group">
                                 <label for="attr-count-select">Number of Attributes to Update</label>
                                 <select id="attr-count-select">
@@ -140,19 +140,19 @@
 
                             <div class="input-group" id="group-key-1">
                                 <label for="attr-key-1">Attribute Key 1</label>
-                                <input type="text" id="attr-key-1" placeholder="e.g. stateRegistrationinscrioEstadual">
+                                <input type="text" id="attr-key-1" placeholder="e.g. Get the key from the API response">
                             </div>
                             <div class="input-group" id="group-key-2" style="display:none;">
                                 <label for="attr-key-2">Attribute Key 2</label>
-                                <input type="text" id="attr-key-2" placeholder="e.g. key2">
+                                <input type="text" id="attr-key-2" placeholder="e.g. Get the key from the API response">
                             </div>
                             <div class="input-group" id="group-key-3" style="display:none;">
                                 <label for="attr-key-3">Attribute Key 3</label>
-                                <input type="text" id="attr-key-3" placeholder="e.g. key3">
+                                <input type="text" id="attr-key-3" placeholder="e.g. Get the key from the API response">
                             </div>
                             <div class="input-group" id="group-key-4" style="display:none;">
                                 <label for="attr-key-4">Attribute Key 4</label>
-                                <input type="text" id="attr-key-4" placeholder="e.g. key4">
+                                <input type="text" id="attr-key-4" placeholder="e.g. Get the key from the API response">
                             </div>
                         </div>
 
