Update static/index.html placeholders

--- a/static/index.html
+++ b/static/index.html
@@ -122,7 +122,7 @@
                             </div>
                         </div>
 
-                        <!-- Specific Config for Update_Asset_add_Attribute -->
+                        <!-- Specific Config for Update_ttribute -->
                         <div id="attribute-config">
                             <div class="input-group">
                                 <label for="attr-count-select">Number of Attributes to Update</label>
