Feat: Replaced hardcoded credentials with local storage persistence

--- a/static/index.html
+++ b/static/index.html
@@ -29,16 +29,16 @@
 
                 <div class="input-group">
                     <label for="tenant-code">Tenant Name</label>
-                    <input type="text" id="tenant-code" placeholder="Enter Tenant Name" value="asp">
+                    <input type="text" id="tenant-code" placeholder="Enter Tenant Name" value="">
                 </div>
                 <div class="input-group">
                     <label for="username">Username</label>
-                    <input type="text" id="username" placeholder="Enter Username" value="9649964096">
+                    <input type="text" id="username" placeholder="Enter Username" value="">
                 </div>
                 <div class="input-group">
                     <label for="password">Password</label>
                     <div class="password-wrapper">
-                        <input type="password" id="password" placeholder="******" value="123456">
+                        <input type="password" id="password" placeholder="******" value="">
                         <span class="eye-icon">👁️</span>
                     </div>
                 </div>
