UI: Reverted title to TechOps Automation Console

--- a/static/index.html
+++ b/static/index.html
@@ -218,7 +218,7 @@
                 <div class="header-left">
                     <img src="/static/images/cropin_text.png" alt="Cropin"
                         style="height: 35px; vertical-align: middle; margin-right: 10px;">
-                    <h1 style="display: inline; vertical-align: middle; color: #009ade;">TechOps Console</h1>
+                    <h1 style="display: inline; vertical-align: middle; color: #009ade;">TechOps Automation Console</h1>
                 </div>
             </div>
 
