Enhance UI with running state spinner and improve script logging

--- a/static/index.html
+++ b/static/index.html
@@ -290,7 +290,7 @@
                     </div>
 
                     <!-- Run Action (Hidden until upload) -->
-                    <div id="run-container" style="display: none; margin-top: 20px;">
+                    <div id="run-container" class="run-controls">
                         <button class="btn-primary" id="run-script-btn" style="background-color: #28a745; width: 100%;">
                             ▶ Run Script
                         </button>
